tutto ok, manca footer

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="contenitore"></div>
             </main>
             <aside>
-                <div class="contenitore"></div>
+                <div class="right"></div>
             </aside>
         </div>
-        <footer></footer>
+        <footer class="clearfix"></footer>
     </body>
 </html>
