--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
                 <div class="right"></div>
             </aside>
         </div>
-        <footer class="clearfix"></footer>
+        <footer></footer>
     </body>
 </html>
