--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header></header>
-        <div class="container clearfix">
-            <aside>
-                <div class="contenitore"></div>
-            </aside>
-            <main>
-                <div class="contenitore"></div>
-            </main>
-            <aside>
-                <div class="right"></div>
-            </aside>
+        <div class="container">
+
+            <header></header>
+            <div class="row clearfix">
+                <aside>
+                    <div class="contenitore"></div>
+                </aside>
+                <main>
+                    <div class="contenitore"></div>
+                </main>
+                <aside>
+                    <div class="right"></div>
+                    <div class="right"></div>
+                </aside>
+            </div>
+            <footer></footer>
+
         </div>
-        <footer></footer>
+
     </body>
 </html>
